--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
 
 
-	<title>Pagina casa pueblo</title>
+	<title>Pagina casa pueeeeeeeeeeeeeeeeeeeeee</title>
 </head>
 
                                                            
