--- a/nuevo/nuevo.html
+++ b/nuevo/nuevo.html
@@ -11,19 +11,11 @@
 <body>
 
 <header>
- <div class="header">
 
-  <div class="caja">1</div>
-  <div class="caja">2</div>
-  <div class="caja">3</div>
-  <div class="caja">4</div>
-  <div class="caja">5</div>
-  
+<h1>Casa Pueblo</h1>
 
 	
-	</div>
-	
-	</header>
+</header>
 
 
 <main>
