--- a/nuevo/nuevo.html
+++ b/nuevo/nuevo.html
@@ -12,15 +12,30 @@
 
 <header>
 
-<h1>Casa Pueblo</h1>
-
+ <contenedor class="header">
+	<nav class="menu">
+		<a href="#" id="btn-acerca-de">Nosotros</a>
+	    <a href="#" id="btn-galeria">Galeria</a>
+		<a href="#" id="btn-sedes">Sedes</a>				
+	</nav>
+	<div class="textos">
+		<h1 class="nombre">Casa Pueblo</h1>
+		<h3 class="nombre2">Acompañamiento Comunitario</h3>
+	</div>
+ </contenedor>
 	
 </header>
 
 
-<main>
-	<div class="main"></div>
- </main>
+<section class="main">
+<div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, quas laudantium accusamus velit, ipsa consequatur ullam placeat itaque quasi perferendis, deserunt excepturi et possimus minus dignissimos illo ad adipisci voluptas!</p></div>
+<section class="sedes" id="sedes"></section>
+<section class="galeria" id="fotos"></section>
+<section class="acerca-de" id="acerca-de"></section>
+
+
+
+</section>
 
 
 
