intentando poner el logo

--- a/nuevo/nuevo.html
+++ b/nuevo/nuevo.html
@@ -3,6 +3,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="sass/estilos.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,300&family=Oswald:wght@300;400;600;700&display=swap" rel="stylesheet">
+
 
 	<title>Practica</title>
 
@@ -10,25 +14,63 @@
 </head>
 <body>
 
+
+
+
+
+
+
+
+
+
 <header>
 
  <contenedor class="header">
 	<nav class="menu">
-		<a href="#" id="btn-acerca-de">Nosotros</a>
+		<a href="#" class="noso" id="btn-acerca-de">Nosotros</a>
 	    <a href="#" id="btn-galeria">Galeria</a>
 		<a href="#" id="btn-sedes">Sedes</a>				
 	</nav>
 	<div class="textos">
-		<h1 class="nombre">Casa Pueblo</h1>
+		<h1 class="nombre">Casa <span>Pueblo</span></h1>
 		<h3 class="nombre2">Acompañamiento Comunitario</h3>
+		<h4 class="nombre3">Asistencia , acompañamiento  y prevencion en consumo problematico</h4>
+	</div>
+
+	<div class="logo">
+		<img class="logo" src="img/logo.png" alt="">
 	</div>
  </contenedor>
 	
 </header>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <section class="main">
-<div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, quas laudantium accusamus velit, ipsa consequatur ullam placeat itaque quasi perferendis, deserunt excepturi et possimus minus dignissimos illo ad adipisci voluptas!</p></div>
+
 <section class="sedes" id="sedes"></section>
 <section class="galeria" id="fotos"></section>
 <section class="acerca-de" id="acerca-de"></section>
@@ -36,6 +78,25 @@
 
 
 </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
