--- a/nuevo/nuevo.html
+++ b/nuevo/nuevo.html
@@ -25,31 +25,46 @@
 
 <header>
 
- <contenedor class="header">
+
 	<nav class="menu">
-		<a href="#" class="noso" id="btn-acerca-de">Nosotros</a>
-	    <a href="#" id="btn-galeria">Galeria</a>
+		<a href="#" id="btn-acerca-de">Nosotros</a>
+    	<a href="#" id="btn-galeria">Galeria</a>
 		<a href="#" id="btn-sedes">Sedes</a>				
 	</nav>
-	<div class="textos">
-		<h1 class="nombre">Casa <span>Pueblo</span></h1>
-		<h3 class="nombre2">Acompañamiento Comunitario</h3>
-		<h4 class="nombre3">Asistencia , acompañamiento  y prevencion en consumo problematico</h4>
-	</div>
 
-	<div class="logo">
-		<img class="logo" src="img/logo.png" alt="">
+
+	
+
+	<div class="contenedor">
+
+
+
+
+		<div class="caja">
+			
+		</div>
+
+		<div class="caja">   
+		
+			<div class="textos">
+				<h1 class="nombre">Casa <span>Pueblo</span></h1>
+				<h3 class="nombre2">Acompañamiento Comunitario</h3>
+				<h4 class="nombre3">Asistencia , acompañamiento  y prevencion en consumo problematico</h4>
+			</div>
+		</div>
+
+
+
+
+
+
+		<div class="caja">
+			<img class="logo" src="img/logo.png" alt="">
+		</div>
+
 	</div>
- </contenedor>
 	
 </header>
-
-
-
-
-
-
-
 
 
 
