deje todo como antes la ocncha de loal ora

--- a/nuevo/nuevo.html
+++ b/nuevo/nuevo.html
@@ -25,13 +25,13 @@
 
 <header>
 
-
+	<div class="menu">	
 	<nav class="menu">
 		<a href="#" id="btn-acerca-de">Nosotros</a>
     	<a href="#" id="btn-galeria">Galeria</a>
 		<a href="#" id="btn-sedes">Sedes</a>				
 	</nav>
-
+		</div>
 
 	
 
