Agregue formulas con MathJax

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ivan Medri</title>
 	<link rel="stylesheet" href="style.css">
+
+	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+	<script src="mathjax-config.js" defer></script> <!--Mathjax configuration file-->
+	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> <!--Include Mathjax Libraries-->
+	<!-- <script type="text/javascript" id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>  -->
+
 </head>
 
 
@@ -66,7 +72,15 @@
 			<div class="menu">
 				sdsd
 			</div>
+			<div class="contenido">
+				\begin{equation}\label{eq}
+					a + b = \int_a^b f(x) \ dx
+				\end{equation}
 
+
+				As you can see in equation \eqref{eq} kajshdflk jhas dkfljha lkdsfjh alkjs dflka jshflk jashdlfk jahs dkljfh alksd 1 lkjhas lkfjha sdklfjh alkdjsf hlk 2 a;ldksjhf a;lkdjhf lk3 alkjsdhfl akdjsf lkj4 alkdjshf lkjh lakjrfh 5
+
+			</div>
 		</div>
 
 
