Acomode el layout de menu, barralateral y contenido

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 
 <body>
 	<main>
+		<!-- Top menu -->
+		<div class="menu">
+				sdsd
+		</div>
+
+
+
 		<!-- The navigation bar -->
 		<div class="barralateral">
 
@@ -41,9 +48,7 @@
 
 
 		<div class="page">
-			<div class="menu">
-				sdsd
-			</div>
+			
 
 
 			<!-- The scrollable area -->
