Cambiamos los colorcitos y las barras de scroll

--- a/index.html
+++ b/index.html
@@ -26,41 +26,57 @@
 	<main>
 		<!-- Top menu -->
 		<div class="menu">
-				sdsd
+			sdsd
 		</div>
 
 
 
 		<!-- The navigation bar -->
 		<div class="barralateral">
+			<nav id="barra_nav" class="h-100 flex-column align-items-stretch pe-4 border-end">
+		      <nav class="nav nav-pills flex-column ">
+		        <a class="nav-link" href="#item-1" >Item 1</a>
+		        <nav class="nav nav-pills flex-column">
+		          <a class="nav-link ms-3 my-1" href="#item-1-1">Item 1-1</a>
+		          <a class="nav-link ms-3 my-1" href="#item-1-2">Item 1-2</a>
+		        </nav>
+		        <a class="nav-link" href="#item-2">Item 2</a>
+		        <a class="nav-link" href="#item-3">Item 3</a>
+		        <nav class="nav nav-pills flex-column">
+		          <a class="nav-link ms-3 my-1" href="#item-3-1">Item 3-1</a>
+		          <a class="nav-link ms-3 my-1" href="#item-3-2">Item 3-2</a>
+		        </nav>
+		      </nav>
+		    </nav>
 
-			      	as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>		
-
+		    <!-- 
+		      	as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
+  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
+  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
+  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
+  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
+  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
+  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
+  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>		
+			-->
 		</div>
 
 
 
-		<div class="page">
+		<div class="page" data-bs-spy="scroll" data-bs-target="#barra_nav" data-bs-smooth-scroll="true"  tabindex="0">
 			
 
 
 			<!-- The scrollable area -->
-			<div class="contenido">
-				<div id="section1">
+			<div class="contenido" >
+				<div id="item-1">
   					<h1>Section 1</h1> 
 	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
 	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
 	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
 	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
 				</div>
-				<div id="section2">
+				<div id="item-2">
   					<h1>Section 2</h1>
   						as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
 	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
@@ -70,6 +86,13 @@
 							a + b = \int_a^b f(x) \ dx
 						\end{equation}
 						As you can see in equation \eqref{eq} kajshdflk jhas dkfljha lkdsfjh alkjs dflka jshflk jashdlfk jahs dkljfh alksd 1 lkjhas lkfjha sdklfjh alkdjsf hlk 2 a;ldksjhf a;lkdjhf lk3 alkjsdhfl akdjsf lkj4 alkdjshf lkjh lakjrfh 5
+				</div>
+				<div id="item-3">
+  					<h1>Section 3</h1>
+  						as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
+	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
+	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
+	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
 				</div>
 			</div>
 		</div>
