--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
 	<title>Ivan Medri</title>
 	<link rel="stylesheet" href="style.css">
 
-
+	<!--Bootstrap Libraries-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 	<!--MathJax Libraries-->
 	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-	<script src="mathjax-config.js" defer></script> <!--Mathjax configuration file-->
-	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> <!--Include Mathjax Libraries-->
-	<script type="text/javascript" id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script> 
+  	<script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  	</script>
 
-	<!--Bootstrap Libraries-->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-	<meta name="viewport" content="width=device-width, initial-scale = 1.0">
 
 </head>
 
@@ -48,57 +45,23 @@
 		        </nav>
 		      </nav>
 		    </nav>
-
-		    <!-- 
-		      	as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-  				as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>		
-			-->
 		</div>
 
 
-
+		<!-- The actual post. Scrollable area. Configured to make it a scrollable area connected to the spyscroll navigation bar given by the data-bs-target property -->
 		<div class="page" data-bs-spy="scroll" data-bs-target="#barra_nav" data-bs-smooth-scroll="true"  tabindex="0">
-			
+			<!-- Posts will be included here using script.js below -->
 
 
-			<!-- The scrollable area -->
-			<div class="contenido" >
-				<div id="item-1">
-  					<h1>Section 1</h1> 
-	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-				</div>
-				<div id="item-2">
-  					<h1>Section 2</h1>
-  						as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  					\begin{equation}\label{eq}
-							a + b = \int_a^b f(x) \ dx
-						\end{equation}
-						As you can see in equation \eqref{eq} kajshdflk jhas dkfljha lkdsfjh alkjs dflka jshflk jashdlfk jahs dkljfh alksd 1 lkjhas lkfjha sdklfjh alkdjsf hlk 2 a;ldksjhf a;lkdjhf lk3 alkjsdhfl akdjsf lkj4 alkdjshf lkjh lakjrfh 5
-				</div>
-				<div id="item-3">
-  					<h1>Section 3</h1>
-  						as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-	  					as <br> as <br>as <br>as <br>as <br>as <br>as <br>as <br>
-				</div>
-			</div>
 		</div>
 	</main>
 
 	
+	<!-- Include "post.html" (Or whatever name you used) into the ".page" div -->
+	<script src="script.js"></script>
 
+
+	<!--Bootsrap script --> 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
