--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 	
 	<!-- Include "post.html" (Or whatever name you used) into the ".page" div -->
-	<script src="script.js"></script>
+	<script src="/script.js"></script>
 
 
 	<!--Bootsrap script --> 
